@@ -717,6 +717,13 @@ CString CRepositoryLister::GetList
     // find that query
 
     CListQuery* query = FindQuery (url, pegRev, repository, complete, includeExternals);
+	if (query == NULL)
+	{
+		// something went very wrong.
+		// Report than and let the user do a refresh
+
+		return CString(MAKEINTRESOURCE(IDS_REPOBROWSE_QUERYFAILURE));
+	}
 
     // wait for the results to come in and return them
     // get "ordinary" list plus direct externals
