@@ -91,6 +91,8 @@ Version 1.7.7
        for empty logs. (Stefan Fuhrmann)
 - BUG: Issue #282: Vector index exception when
        updating the log cache. (Stefan Fuhrmann)
+- BUG: Issue #283: Repobrowser crash after
+       changing the URL. (Stefan Furhmann)
 
 Version 1.7.6
 - BUG: Issue #209: repo browser doesn't
